[package]
name = "atomic-waitgroup"
authors = ["plan <frostyplanet@gmail.com>"]
version = "0.1.3"
edition = "2021"
license = "BSD-1-Clause"
readme = "README.md"
description = "A waitgroup implementation supports async with advanced features"
documentation = "https://docs.rs/atomic-waitgroup"
repository = "https://github.com/frostyplanet/atomic-waitgroup-rs/"
keywords = ["async", "waitgroup", "concurrency"]
categories = ["concurrency", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
smol = [] # just for test
trace_log = [] # test for test

[dependencies]
parking_lot = "0"
log = "0"

[dev-dependencies]
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread"] }
captains-log = {version=">=0.15", features = ["ringfile", "tracing"]}
rand = "0.7"
rstest = "0"
smol = "2"
